--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ a {
 
 .nav-link:hover{
   color: #482ff7 !important;
+  text-decoration: none !important;
 }
 
 .nav-logo {
